--- a/pom.xml
+++ b/pom.xml
@@ -22,18 +22,24 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-surefire-plugin</artifactId> -->
-<!-- 				<version>2.19</version> -->
-<!-- 				<configuration> -->
-<!-- 					<argLine>-Xmx1024m</argLine> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
+			<!-- <plugin> -->
+			<!-- <groupId>org.apache.maven.plugins</groupId> -->
+			<!-- <artifactId>maven-surefire-plugin</artifactId> -->
+			<!-- <version>2.19</version> -->
+			<!-- <configuration> -->
+			<!-- <argLine>-Xmx1024m</argLine> -->
+			<!-- </configuration> -->
+			<!-- </plugin> -->
 		</plugins>
 	</build>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.reuters</groupId>
+			<artifactId>rfa</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
